--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj
@@ -22,19 +22,19 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{72DDFC00-93CD-48E2-A613-7438F3B81159}</ProjectGuid>
     <RootNamespace>My100TangerineJuice</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -69,7 +69,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>C:\Users\Sora\Documents\CPPLibraries\SDL2_ttf-2.0.15\include;C:\Users\Sora\Documents\CPPLibraries\SDL2_mixer-2.0.4\include;C:\Users\Sora\Documents\CPPLibraries\SDL2_image-2.0.5\include;C:\Users\Sora\Documents\CPPLibraries\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Sora\Documents\CPPLibraries\SDL2_ttf-2.0.15\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL2_mixer-2.0.4\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL2_image-2.0.5\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL\lib\win32;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>C:\Users\Sora\Documents\CPPLibraries\SDL2_ttf-2.0.15\include;C:\Users\Sora\Documents\CPPLibraries\SDL2_mixer-2.0.4\include;C:\Users\Sora\Documents\CPPLibraries\SDL2_image-2.0.5\include;C:\Users\Sora\Documents\CPPLibraries\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Sora\Documents\CPPLibraries\SDL2_ttf-2.0.15\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL2_mixer-2.0.4\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL2_image-2.0.5\lib\x86;C:\Users\Sora\Documents\CPPLibraries\SDL\lib\win32;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -79,6 +86,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -102,9 +110,11 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -123,6 +133,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameIntro.cpp" />
+    <ClCompile Include="Globals.cpp" />
+    <ClCompile Include="LClass.cpp" />
+    <ClCompile Include="LilacEngine.cpp" />
+    <ClCompile Include="LTexture.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ResourcesManager.cpp" />
+    <ClCompile Include="Utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameIntro.h" />
+    <ClInclude Include="Globals.h" />
+    <ClInclude Include="LClass.h" />
+    <ClInclude Include="LilacEngine.h" />
+    <ClInclude Include="LTexture.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="ResourcesManager.h" />
+    <ClInclude Include="Utils.h" />
+    <ClInclude Include="Vector2.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="100 Tangerine Juice.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Documents\Assets\game_icon_t_256.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
