--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
@@ -23,6 +23,15 @@
     <Filter Include="LClasses">
       <UniqueIdentifier>{241dc383-34da-4b02-91f8-e2b0fd1139b1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Callbacks">
+      <UniqueIdentifier>{eadae165-73e9-4638-aad2-cbc0cc333498}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="LClasses\Menus">
+      <UniqueIdentifier>{d3eef868-ddea-450b-bef6-a30a4dbd8e31}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes">
+      <UniqueIdentifier>{3faa6449-6600-4727-929e-73119f4fac58}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -44,12 +53,6 @@
     <ClCompile Include="LClass.cpp">
       <Filter>Wrappers</Filter>
     </ClCompile>
-    <ClCompile Include="GameIntro.cpp">
-      <Filter>LClasses</Filter>
-    </ClCompile>
-    <ClCompile Include="Unit.cpp">
-      <Filter>LClasses</Filter>
-    </ClCompile>
     <ClCompile Include="LButton.cpp">
       <Filter>Wrappers</Filter>
     </ClCompile>
@@ -59,6 +62,28 @@
     <ClCompile Include="UIManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
+    <ClCompile Include="ButtonCallbacks.cpp">
+      <Filter>Callbacks</Filter>
+    </ClCompile>
+    <ClCompile Include="GameIntro.cpp">
+      <Filter>LClasses\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
+      <Filter>LClasses\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="MusicManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="OverlayManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="World.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Unit.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="SFXManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -83,12 +108,6 @@
     <ClInclude Include="LClass.h">
       <Filter>Wrappers</Filter>
     </ClInclude>
-    <ClInclude Include="GameIntro.h">
-      <Filter>LClasses</Filter>
-    </ClInclude>
-    <ClInclude Include="Unit.h">
-      <Filter>LClasses</Filter>
-    </ClInclude>
     <ClInclude Include="LButton.h">
       <Filter>Wrappers</Filter>
     </ClInclude>
@@ -98,6 +117,28 @@
     <ClInclude Include="UIManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
+    <ClInclude Include="ButtonCallbacks.h">
+      <Filter>Callbacks</Filter>
+    </ClInclude>
+    <ClInclude Include="GameIntro.h">
+      <Filter>LClasses\Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu.h">
+      <Filter>LClasses\Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="MusicManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="OverlayManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="World.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Unit.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="SFXManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="100 Tangerine Juice.rc">
