--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj
@@ -138,6 +138,14 @@
     <ClCompile Include="ButtonCallbacks.cpp" />
     <ClCompile Include="GameIntro.cpp" />
     <ClCompile Include="Globals.cpp" />
+    <ClCompile Include="HUDUnit.cpp" />
+    <ClCompile Include="Panel.cpp" />
+    <ClCompile Include="PanelBonus.cpp" />
+    <ClCompile Include="PanelDrop.cpp" />
+    <ClCompile Include="PanelEncounter.cpp" />
+    <ClCompile Include="PanelHeal.cpp" />
+    <ClCompile Include="PanelMove.cpp" />
+    <ClCompile Include="PanelPower.cpp" />
     <ClCompile Include="PlayerUnit.cpp" />
     <ClCompile Include="PreGame.cpp" />
     <ClCompile Include="LButton.cpp" />
@@ -166,6 +174,14 @@
     <ClInclude Include="ButtonCallbacks.h" />
     <ClInclude Include="GameIntro.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="HUDUnit.h" />
+    <ClInclude Include="Panel.h" />
+    <ClInclude Include="PanelBonus.h" />
+    <ClInclude Include="PanelDrop.h" />
+    <ClInclude Include="PanelEncounter.h" />
+    <ClInclude Include="PanelHeal.h" />
+    <ClInclude Include="PanelMove.h" />
+    <ClInclude Include="PanelPower.h" />
     <ClInclude Include="PlayerUnit.h" />
     <ClInclude Include="PreGame.h" />
     <ClInclude Include="LButton.h" />
