LilacEngine: Update 50 - Fixes a memory leak with LTexture and the text

--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClCompile Include="HUDUnit.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -250,6 +253,9 @@
     </ClInclude>
     <ClInclude Include="HUDUnit.h">
       <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Managers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
