--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
@@ -155,6 +155,7 @@
     <ClCompile Include="DiceThrowComponent.cpp">
       <Filter>LClasses\Components</Filter>
     </ClCompile>
+    <ClCompile Include="BattleComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -269,6 +270,7 @@
     <ClInclude Include="DiceThrowComponent.h">
       <Filter>LClasses\Components</Filter>
     </ClInclude>
+    <ClInclude Include="BattleComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="100 Tangerine Juice.rc">
