--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj.filters
@@ -161,6 +161,7 @@
     <ClCompile Include="UseSkillComponent.cpp">
       <Filter>LClasses\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Discord.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -281,6 +282,7 @@
     <ClInclude Include="UseSkillComponent.h">
       <Filter>LClasses\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Discord.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="100 Tangerine Juice.rc">
