--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="ButtonCallbacks.cpp" />
     <ClCompile Include="DiceThrowComponent.cpp" />
     <ClCompile Include="Discord.cpp" />
+    <ClCompile Include="EndgameComponent.cpp" />
     <ClCompile Include="GameIntro.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Globals.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="ButtonCallbacks.h" />
     <ClInclude Include="DiceThrowComponent.h" />
     <ClInclude Include="Discord.h" />
+    <ClInclude Include="EndgameComponent.h" />
     <ClInclude Include="GameIntro.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Globals.h" />
