--- a/100 Tangerine Juice/100 Tangerine Juice.vcxproj
+++ b/100 Tangerine Juice/100 Tangerine Juice.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="ResourcesManager.cpp" />
     <ClCompile Include="SaveManager.cpp" />
     <ClCompile Include="SFXManager.cpp" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="SkillDefinitions.cpp" />
     <ClCompile Include="Tangerine.cpp" />
     <ClCompile Include="TimerCallbacks.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="ResourcesManager.h" />
     <ClInclude Include="SaveManager.h" />
     <ClInclude Include="SFXManager.h" />
+    <ClInclude Include="Shop.h" />
     <ClInclude Include="SkillDefinitions.h" />
     <ClInclude Include="Tangerine.h" />
     <ClInclude Include="TimerCallbacks.h" />
